--- a/erpnext/projects/doctype/project_document_type/project_document_type.json
+++ b/erpnext/projects/doctype/project_document_type/project_document_type.json
@@ -84,7 +84,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-12 19:42:01.070133", 
+ "modified": "2017-12-18 12:18:08.256672", 
  "modified_by": "Administrator", 
  "module": "Projects", 
  "name": "Project Document Type", 
@@ -106,6 +106,26 @@
    "read": 1, 
    "report": 1, 
    "role": "All", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 0, 
+   "write": 1
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 0, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "Employee", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
