--- a/erpnext/hr/doctype/appraisal/appraisal.json
+++ b/erpnext/hr/doctype/appraisal/appraisal.json
@@ -284,7 +284,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Start Date", 
+   "label": "2017 - (1 or 2)", 
    "length": 0, 
    "no_copy": 0, 
    "oldfieldname": "start_date", 
@@ -442,7 +442,7 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Total Score (Out of 100)", 
+   "label": "Total Score (Out of 10)", 
    "length": 0, 
    "no_copy": 1, 
    "oldfieldname": "total_score", 
@@ -653,7 +653,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-23 13:07:56.502302", 
+ "modified": "2017-12-24 11:02:28.860543", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Appraisal", 
