--- a/erpnext/hr/doctype/business_trip_exceptional_approval/business_trip_exceptional_approval.json
+++ b/erpnext/hr/doctype/business_trip_exceptional_approval/business_trip_exceptional_approval.json
@@ -143,6 +143,37 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
+   "fieldname": "days", 
+   "fieldtype": "Read Only", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "Days", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "business_trip.days", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
    "fieldname": "assignment_type", 
    "fieldtype": "Read Only", 
    "hidden": 0, 
@@ -362,7 +393,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-01-04 16:11:36.991409", 
+ "modified": "2018-01-08 15:09:10.350698", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Business Trip Exceptional Approval", 
@@ -412,7 +443,7 @@
   {
    "amend": 0, 
    "apply_user_permissions": 1, 
-   "cancel": 1, 
+   "cancel": 0, 
    "create": 1, 
    "delete": 1, 
    "email": 1, 
@@ -426,15 +457,15 @@
    "role": "Director", 
    "set_user_permissions": 0, 
    "share": 1, 
-   "submit": 1, 
+   "submit": 0, 
    "write": 1
   }, 
   {
    "amend": 0, 
    "apply_user_permissions": 1, 
-   "cancel": 0, 
-   "create": 0, 
-   "delete": 0, 
+   "cancel": 1, 
+   "create": 1, 
+   "delete": 1, 
    "email": 1, 
    "export": 1, 
    "if_owner": 0, 
@@ -446,8 +477,8 @@
    "role": "Employee", 
    "set_user_permissions": 0, 
    "share": 1, 
-   "submit": 0, 
-   "write": 0
+   "submit": 1, 
+   "write": 1
   }
  ], 
  "quick_entry": 0, 
