--- a/erpnext/hr/doctype/business_trip_exceptional_approval/business_trip_exceptional_approval.json
+++ b/erpnext/hr/doctype/business_trip_exceptional_approval/business_trip_exceptional_approval.json
@@ -393,7 +393,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2018-01-08 15:09:10.350698", 
+ "modified": "2018-01-10 11:27:08.593396", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Business Trip Exceptional Approval", 
@@ -478,6 +478,26 @@
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 1, 
+   "write": 1
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 0, 
+   "create": 1, 
+   "delete": 1, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "CEO", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 0, 
    "write": 1
   }
  ], 
